# FisherYatesShuffle

./: CMakeLists.txt
examples/: CMakeLists.txt  main.c
src/: FisherYatesShuffle.c  FisherYatesShuffle.h
